Fix posts display on mobile version

--- a/packages/app/src/pages/home/index.less
+++ b/packages/app/src/pages/home/index.less
@@ -1,6 +1,10 @@
 .postingDashboard {
     display: grid;
 
+    &.mobile {
+        display: block;
+    }
+
     grid-template-columns: 10vw 1fr 0.5fr;
     grid-template-rows: 1fr;
     grid-column-gap: 20px;
